@@ -1,5 +1,8 @@
 2000-09-23  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* com1.c (news): Don't let CUMBER go negative.
+	* cypher.c (cypher): For INVEN, show -1% if CUMBER is zero.
+
 	* battlestar/com4.c (drop): Disambiguate BODY; handle "kick
 	door".  From OpenBSD.
 	* tests/battlestar.in32, tests/battlestar.out32,
